added rabbitmq to span_service

--- a/spann_service/.env.example
+++ b/spann_service/.env.example
@@ -50,3 +50,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_USER=myuser
+RABBITMQ_PASSWORD=mypassword
+RABBITMQ_VHOST=
