--- a/spann_service/composer.json
+++ b/spann_service/composer.json
@@ -12,6 +12,7 @@
         "laravel/jetstream": "^2.6",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "php-amqplib/php-amqplib": "^3.4",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
